[gd_scene load_steps=2 format=3 uid="uid://byp8oy3yu15ht"]

[ext_resource type="Script" path="res://scripts/core/multiplayer.gd" id="1_r5q1d"]

[node name="Multiplayer" type="Node2D"]
script = ExtResource("1_r5q1d")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -91.0
offset_right = 110.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -66.0
offset_right = 110.0
grow_horizontal = 2
grow_vertical = 0

[node name="menu" type="Button" parent="CanvasLayer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="host" type="Button" parent="CanvasLayer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="join" type="Button" parent="CanvasLayer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="StartGame" type="Button" parent="CanvasLayer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/ColorRect/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/ColorRect/VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/VBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/VBoxContainer/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
